--- a/first.html
+++ b/first.html
@@ -11,17 +11,101 @@
     <div class="container mt-3">
         <h2>Contextual Colors</h2>
         <p>Use the contextual classes to provide "meaning through colors":</p>
-        <p class="text-muted">This text is muted.</p>
-        <p class="text-primary">This text is important.</p>
-        <p class="text-success">This text indicates success.</p>
-        <p class="text-info">This text represents some information.</p>
-        <p class="text-warning">This text represents a warning.</p>
-        <p class="text-danger">This text represents danger.</p>
+        <p class="text-muted text-bg-primary">This text is muted.</p>
+        <p class="text-primary text-bg-success">This text is important.</p>
+        <p class="text-success text-bg-info">This text indicates success.</p>
+        <p class="text-info text-bg-warning">This text represents some information.</p>
+        <p class="text-warning text-bg-danger">This text represents a warning.</p>
+        <p class="text-danger text-bg-secondary">This text represents danger.</p>
         <p class="text-secondary">Secondary text.</p>
         <p class="text-dark">This text is dark grey.</p>
         <p class="text-body">Default body color (often black).</p>
         <p class="text-light">This text is light grey (on white background).</p>
         <p class="text-white">This text is white (on white background).</p>
+    </div>
+    <h1>Tables</h1>
+    <br><br>
+    <div class="container mt-3">
+        <h2>Dark Striped Table</h2>           
+        <table class="table table-dark table-striped table-hover">
+          <thead>
+            <tr class="table-danger ">
+              <th>Firstname</th>
+              <th>Lastname</th>
+              <th>Email</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Deepak</td>
+              <td>P K</td>
+              <td>deepak@example.com</td>
+            </tr>
+            <tr>
+              <td>Ibin</td>
+              <td>b</td>
+              <td>ibin@example.com</td>
+            </tr>
+            <tr>
+              <td>Alen</td>
+              <td>D</td>
+              <td>alen@example.com</td>
+            </tr>
+          </tbody>
+        </table>
+    </div>
+    <h1>Responsive Tables</h1>
+    <br><br>
+    <div class="container table-responsive-md">
+        <table class="table table-bordered ">
+          <thead class="table-dark">
+            <tr class="table-secondary">
+              <th>#</th>
+              <th>Firstname</th>
+              <th>Lastname</th>
+              <th>Age</th>
+              <th>City</th>
+              <th>Country</th>
+              <th>Sex</th>
+              <th>Example</th>
+              <th>Example</th>
+              <th>Example</th>
+              <th>Example</th>
+              <th>Example</th>
+              <th>Example</th>
+              <th>Example</th>
+              <th>Example</th>
+              <th>Example</th>
+              <th>Example</th>
+              <th>Example</th>
+              <th>Example</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>Deepak</td>
+              <td>P K</td>
+              <td>20</td>
+              <td>Kozhikode</td>
+              <td>IND</td>
+              <td>male</td>
+              <td>Yes</td>
+              <td>Yes</td>
+              <td>Yes</td>
+              <td>Yes</td>
+              <td>Yes</td>
+              <td>Yes</td>
+              <td>Yes</td>
+              <td>Yes</td>
+              <td>Yes</td>
+              <td>Yes</td>
+              <td>Yes</td>
+              <td>Yes</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
+    </div
 </body>
 </html>
