--- a/button.html
+++ b/button.html
@@ -38,15 +38,15 @@
             </div>
         </div>
     </div>
+    <!-- card -->
     <div class="container mt-3">
         <h2>Card Image</h2>
-        <div class="card" style="width:100%">
+        <div class="card" style="width:400px">
           <img class="card-img-top" src="../paris.jpg" alt="Card image" style="width:100%">
           <div class="card-body">
             <h4 class="card-title">Paris</h4>
             <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
             <a href="#" class="btn btn-primary">see more</a>
-          </div>
         </div>
     </div>
 </body>
